Topology Mirror: not refreshing vertex UUIDs #29620

Closed
opened 2011-12-14 14:54:55 +01:00 by Pep · 4 comments

%%%-Take a mesh.

  • Enter edit mode and delete the full mesh.
  • Create 3 vertices linked by 2 edges (open triangle).
  • Activate Topology Mirror.
  • The two exterior vertices match. That's fine.
  • Now select those 2 vertices and link them with 'F'.

You will appreciate that, even though their topology is not unique (now all three vertices should have the same UUID), those 2 vertices are still matching. However, if you press TAB twice, exiting and entering edit mode again, the UUIDS are updated now, and those 2 don't match anymore.

Now that they are not matching, you can delete that last edge (not the vertices). Now they should match again. But they don't, until you enter object mode and you come back to edit mode.

I've found other situations where this happens, but I assume that if you fix this, all will be fixed.

Sorry if I'm being a bit of a PITA... ;)

Regards.

Pep.

(2.61rc, Ubuntu 11.10, Sony VAIO)
(2.60a, WinXP, HP Compaq 7700)
%%%

%%%-Take a mesh. - Enter edit mode and delete the full mesh. - Create 3 vertices linked by 2 edges (open triangle). - Activate Topology Mirror. - The two exterior vertices match. That's fine. - Now select those 2 vertices and link them with 'F'. You will appreciate that, even though their topology is not unique (now all three vertices should have the same UUID), those 2 vertices are still matching. However, if you press TAB twice, exiting and entering edit mode again, the UUIDS are updated now, and those 2 don't match anymore. Now that they are not matching, you can delete that last edge (not the vertices). Now they should match again. But they don't, until you enter object mode and you come back to edit mode. I've found other situations where this happens, but I assume that if you fix this, all will be fixed. Sorry if I'm being a bit of a PITA... ;) Regards. Pep. (2.61rc, Ubuntu 11.10, Sony VAIO) (2.60a, WinXP, HP Compaq 7700) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Campbell, can you please look into this?%%%

%%%Campbell, can you please look into this?%%%

%%%fixed r42660.%%%

%%%fixed r42660.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29620
No description provided.