fix [#29620] Topology Mirror: not refreshing vertex UUIDs